{
    "name": "PInput",
    "maps": [
        {
            "name": "Player",
            "id": "dfd6042f-f0c7-4095-9e19-99cd966bf44a",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "203a704e-ee14-4680-b88f-b8acf4df5f30",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "b1ea1b7f-c1d9-4e71-8ba7-faaac6969651",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Ability1",
                    "type": "Button",
                    "id": "88e2fe45-0eeb-44eb-b49c-c5e45c320105",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Ability2",
                    "type": "Button",
                    "id": "8a989999-c794-47be-b542-be463db704f4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Ability3",
                    "type": "Button",
                    "id": "7d5d32b7-3c24-4130-a93b-e0f6a3ad5ae0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Ult",
                    "type": "Button",
                    "id": "860fd34e-f8ac-4b24-8c12-0c00d2d60157",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BasicAttack",
                    "type": "Button",
                    "id": "3d1021e7-c717-4476-a8e2-a3821ad170f8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondAttack",
                    "type": "Button",
                    "id": "0ea8a137-3eb8-442f-b89e-a17e532bd760",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "84c96e07-a7c7-4449-8cdd-38a463458d7f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ControllerAim",
                    "type": "Value",
                    "id": "e77155af-8a87-48e5-a4ad-ec3234680115",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "84ca4737-0585-4b73-9b96-a959e6bf99f7",
                    "path": "3DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "0c650aa7-056d-42cb-864c-9180077d55b1",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ee16a92c-7472-4b5b-9570-1ab955cb3657",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "18e986c3-dd37-476c-8a2f-5815cddfc8b7",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "cd992ed2-9047-4e40-8761-d2f6a75a694d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "forward",
                    "id": "e2a46203-cda7-42d7-af77-a90b5d81287f",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "backward",
                    "id": "bdd9ad9b-5097-451d-b14c-36f502717446",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "3D Vector",
                    "id": "019b5415-4f75-4655-b53a-548985eaae6d",
                    "path": "3DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "758b6dfd-53f2-416e-b5d8-b602e140f25a",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "bd562dfe-7fd1-4c78-90f6-dfbe7fd569c1",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "e0a4cc76-d53f-4256-924c-8576985ec124",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "05d6c059-df7d-45f7-8cbe-df63cd97c669",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "forward",
                    "id": "5fc3fc98-a10b-4053-bd55-c8f85038adfb",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "backward",
                    "id": "8060462f-8a7f-40fe-8e8f-8543eae7a593",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "d16c7918-c256-4e70-b7c7-c9f14be1812e",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1af8c7d3-3801-49ae-867a-1463eb2b6c2d",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4172ab68-4c9d-4333-af4a-625d73438ffb",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ability1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ce53efbf-d343-429e-92e5-dcf59392da55",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ability1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0b0e6e88-c27d-4af7-a438-e6475d33a0b6",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ability2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "497cf747-4226-414c-979b-5fef19a8e252",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ability2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dca4e22a-b178-4b70-810c-ef794cafc465",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ability3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f820fd7f-1223-46e6-b547-1019759668bd",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ability3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c0b2eefc-a8b1-4086-b393-3c43d0043ec9",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ult",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6a4b1876-1947-4b5a-a797-f68cc940c4d2",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ult",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3c9e726d-abb1-400d-ab1c-5d32eddd9224",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BasicAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0239be8b-ddce-4b26-b438-f1e735cc1fcc",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BasicAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dd158453-a2e7-4ff4-abea-2fbd74b81a62",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "93f09fa6-34ec-491c-9bca-fbd8d023dece",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "039a62d2-55df-4567-907c-76ddaecce0de",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ca9851e8-e283-4c43-985f-88d7276d43dd",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "RightStick",
                    "id": "1a0578f6-d9fd-45ac-bd3f-0c881776c061",
                    "path": "3DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControllerAim",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "d767fa61-7ac6-4907-bd3a-6997be73afbe",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControllerAim",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "af5c51ba-0bd0-4354-884a-7d56f888a756",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControllerAim",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "6704e42a-dbe0-4f21-a09d-73abd3553fb4",
                    "path": "<Gamepad>/rightStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControllerAim",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "aeec7cdc-f507-41d2-badc-1329ba29da19",
                    "path": "<Gamepad>/rightStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControllerAim",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "forward",
                    "id": "41229437-fae2-48c2-b1dc-fc15f42ceafe",
                    "path": "<Gamepad>/rightStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControllerAim",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "backward",
                    "id": "0be53e54-ea1f-4cae-a890-70ac374edd32",
                    "path": "<Gamepad>/rightStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControllerAim",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}